Update to 4.3.2_gnu-1
* fixup configs * add CONFIG_MTD_PCMCIA=m - FS#46316 -> https://bugs.archlinux.org/task/46316
* add CONFIG_MTD_UBI_BLOCK=Y - FS#47066 -> https://bugs.archlinux.org/task/47066
* add CONFIG_SENSORS_NCT7904=m - FS#46488 -> https://bugs.archlinux.org/task/46488
* add CONFIG_BPF_SYSCALL=Y - FS#47008 -> https://bugs.archlinux.org/task/47008
* add CONFIG_DISPLAY_PANEL_TPO_TD028TTEC1=m - #857 -> https://labs.parabola.nu/issues/857
* add CONFIG_USB_G_DBGP=m - #858 -> https://labs.parabola.nu/issues/858

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-12-13  André Silva  <emulatorman@parabola.nu>
+
+	* linux-libre-4.3.2_gnu-1
+	* Enabled CONFIG_DISPLAY_PANEL_TPO_TD028TTEC1 and CONFIG_USB_G_DBGP modules [7][8]
+
 2015-09-23  André Silva  <emulatorman@parabola.nu>
 
 	* linux-libre-4.2.1_gnu-1
@@ -82,3 +87,5 @@
 [4] https://www.gnu.org/graphics/gnu-and-freedo/gnu-and-freedo.html
 [5] https://labs.parabola.nu/issues/685
 [6] https://labs.parabola.nu/issues/750
+[7] https://labs.parabola.nu/issues/857
+[8] https://labs.parabola.nu/issues/858
