--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2015-12-08  Serede Sixty Six  <serede.dev@gmail.com>
+
+    1.13-1:
+    * new upstream release
+    * added armv6h architecture for Arch Linux ARM project
+____________________________________________________________
+
 2014-11-08  Mariusz Libera  <mariusz.libera@gmail.com>
 
     1.10-1:
