--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2015-12-24 aksr <aksr at t-com dot me>
+	* 1.8:
+	new upstream release
+
 2014-09-18 aksr <aksr at t-com dot me>
 	* 1.7:
 	new upstream release
