--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2016-03-10 aksr <aksr at t-com dot me>
+	* 2.0:
+	new upstream release
+
 2015-12-24 aksr <aksr at t-com dot me>
 	* 1.8:
 	new upstream release
