--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-03-21 Fabien Dubosson <fabien.dubosson@gmail.com>:
+
+	* 2015.1.0.8-1:
+	New upstream release
+
 2016-02-15 Fabien Dubosson <fabien.dubosson@gmail.com>:
 
 	* 2015.1.0.4-1:
