--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-09-02 Fabien Dubosson <fabien.dubosson@gmail.com>
+
+	* v0.6.2-1:
+	New upstream release
+
 2016-07-22 Fabien Dubosson <fabien.dubosson@gmail.com>
 
 	* v0.6.1-1:
