New upstream release 1.7.13

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2016/11/10 - lcmc-1.7.13-1
+  * New upstream release.
+  Added env variable to deuglify java fonts.
+
 2016/09/05 - lcmc-1.7.12-1
   * New upstream release.
 
