New upstream release 3.3.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-12-22 Benjamin Wilhelm <aur@hedgehogcode.de>
+
+	* 3.3.1-1:
+	New upstream release
+
 2016-12-07 Benjamin Wilhelm <aur@hedgehogcode.de>
 
 	* 3.3.0-1:
