--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+2017-03-03  Christian Kohlstedde <christian+aur@kohlsted.de>
+
+	1.3.5-1:
+	* new upstream release
+
+
 2013-06-20  Mariusz Libera  <mariusz.libera@gmail.com>
 
 	1.3.4-1:
