--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2017-03-10 Pierre Choffet <peuc@wanadoo.fr>
+	* 0.8.1.r3017.bf9fcc60-3 :
+	Fix package install on x86_64 systems
+	
 	* 0.8.1.r3017.bf9fcc60-2 :
 	Fix return-to-the-roots.install sha256sums value
 	Add missing build dependencies
