--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2017-03-12 Fabien Dubosson <fabien.dubosson@gmail.com>:
+
+	* 2016.1.0.3-1:
+	New upstream release
+
 2016-07-15 Fabien Dubosson <fabien.dubosson@gmail.com>:
 
 	* 2015.1.0.12-1:
