--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,23 @@
+ Version 2.14.0 - 08 Jul 2017
+- Update translations.
+- Fix typo in error catching - base_efiction
+- XenForo alternatehistory.com follows QQ more than SV/SB.
+- Remove 9 defunct sites - occlumency.sycophanthex.com,
+  lumos.sycophanthex.com, erosnsappho.sycophanthex.com,
+  chaos.sycophanthex.com, ashwinder.sycophanthex.com, pommedesang.com,
+  dramione.org, www.indeath.net and fanfiction.lucifael.com.
+- Fixes for fanfiktion.de site changes.
+- fimfiction adapter: views/total_views fix for site change -- thanks
+  FaceDeer!
+- Fix for XenForo(SB/SV) threadmarks with non-ascii chars. (web & CLI)
+- Fix plugin config check for _filelist.
+- Add `include_author_notes` option to collect Fimfiction author's notes,
+  thanks FaceDeer.
+- Changes to base_xenforoforum_adapter to use threadmarks.rss for SV/SB,
+  separate threadmark collection for QQ.
+- Also add show_chapter_authors option.
+- Fix for XenForo Threadmarks change on SB & SV--not on QQ.
+
 Version 2.13.0 - 22 Jun 2017
 - Update translations.
 - Fix for finestories.com using Modern theme rather than Classic, thanks,
@@ -58,7 +78,3 @@ Version 2.13.0 - 22 Jun 2017
 2017-05-21
 - Fix for asianfanficscom site change.
 - New site wattpad.com -- thanks, botmtl!
-
-Version 2.12.0 - 20 May 2017
-- FIX for issue with Epub Update discarding existing images in Epub. Oops. :-(
-  (Came from ffnet img referer fix.)
