--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,10 @@
 2017-07-20 Christopher Arndt <aur -at- chrisarndt -dot- de>
 
+	* 1:1.9.7b.r2.gc57e8169-2 :
+	Added missing 'clthreads' dependency'.
+
+2017-07-20 Christopher Arndt <aur -at- chrisarndt -dot- de>
+
 	* 1:1.9.7b.r2.gc57e8169-1 :
 	New PKBUILD maintainer.
 	Added 'changelog.txt' file.
