--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
+2017-07-24 Fabien Dubosson <fabien.dubosson@gmail.com>
+
+	* 0.2.2-1:
+	Package created
+
 2016-11-09 Fabien Dubosson <fabien.dubosson@gmail.com>
 
-	* v0.2.1-1:
+	* 0.2.1-1:
 	Package created
