--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2017-07-24 Fabien Dubosson <fabien.dubosson@gmail.com>
+
+    * 1.2-1:
+    New upstream release
+
 2017-02-09 Fabien Dubosson <fabien.dubosson@gmail.com>
 
     * 1.1.2-1:
