--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2017-07-28 David Demelier <markand@malikania.fr>
+	* 2.1.3 :
+	Upstream update to 2.1.3
+
 2017-07-03 David Demelier <markand@malikania.fr>
 	* 2.1.2 :
 	Upstream update to 2.1.2
